[package]
name = "cassandra_stress"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrs = { version = "2" }
time = "0.2.16"
clap = "2.33.1"
yaml-rust = "0.4.4"